<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@null"
    android:focusable="auto"
    android:background="@color/dark_black">

    <EditText
        android:id="@+id/userPass"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/light_green"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="@font/inter_semibold"
        android:hint="Введите пароль"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_bold"
        android:text="Пароль"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLogin" />

    <Button
        android:id="@+id/registrBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="316dp"
        android:layout_height="68dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/inter_semibold"
        android:text="Создать аккаунт"
        android:textAllCaps="false"
        android:textColor="@color/light_green"
        android:textScaleX="0.95"
        android:textSize="12sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passText"
        app:strokeColor="@color/light_green"
        app:strokeWidth="4dp" />

    <EditText
        android:id="@+id/userLogin"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_green"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="@font/inter_semibold"
        android:hint="Введите логин"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="Имя пользователя"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/earth" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_semibold"
        android:text="Забыли пароль?"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterBtn" />

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="317dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/btn_selector"
        android:fontFamily="@font/inter_bold"
        android:text="Войти"
        android:textColor="#393D40"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPass" />

    <ImageView
        android:id="@+id/earth"
        android:layout_width="412dp"
        android:layout_height="252dp"
        android:src="@drawable/ion_earth"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/inter_bold"
        android:text="Добро пожаловать!"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>