<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/delete_menu"
        android:title="Delete"
        android:icon="@drawable/baseline_delete_24"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>
</menu>